--- a/index.html
+++ b/index.html
@@ -1,17 +1,48 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>My Website</title>
-        <link rel="stylesheet" href="./style.css">
-        <link rel="icon" href="./favicon.ico" type="image/x-icon">
-    </head>
-    <body>
-        <main>
-            <h1>Welcome to My Website</h1>
-        </main>
-        <script src="index.js"></script>
-    </body>
-</html>
+<head>
+    <title>Shading</title>
+    <link rel="stylesheet" href="main.css">
+</head>
+
+<body>
+    <h1>How I draw</h1>
+    <h2 class="comment">Hello, I am <em>Kami</em>. Drawing ever since I was a child, I often found myself thinking: "What if I could
+    just copy someone else? Find out how they do it, and maybe even implore it into my own way of drawing?" You see,
+    humans learn how to everything by <em>copying</em>. Speaking? Copying. Moving? Copying. Drawing? You guessed it,
+    <em>copying</em> It's easier to build a house when you have the ground already there. <br>
+    Which is why, today, I am going to share <em>my</em> way of drawing, so you can find out how other people
+    draw, and maybe even learn a few things yourself.</h2>
+
+    
+    <a href="lineart.html">Lineart</a> <a href="Colouring.html">Colouring</a> <a href="Shading.html">Shading</a> <a href="Finishing touches.html">Finishing touches</a>
+
+    <h1>Sketch</h1>
+
+    <div><img src="kinda.png" alt="idkanymore"> stuff
+    </div>
+    <p>Personally, I deem a sketch the most important part of drawing. It determines where everything will go,how it will look,
+    and is the perfect time to give emotion and flow to the art. <br>
+    Most if not all times, my first sketch is messy and a understandable to only me. A good sketch should show where
+    everything is, how it will look, nd give a feeling. If your sketch doesn't have a feeling (unless you're using colours
+    for that), it won't have it at all. Sketching is where you let yourself be free and do whatever you want untill
+    you settle for one you like.</p>
+    <h2>Sometimes I also draw the outline, a silluete, and kidna.. sculpt it? Slowly add details, one bit by
+    another, untill I have a sketch. Or I simply draw the silluete and then draw the <strong>more detailed sketch</strong>
+    afterwards.</h2>
+
+    <h1>Detailed sketch</h1>
+
+    <p>This is where I add clothing, hair, expression and over all more detailed character.</p>
+
+    <h2><strong>Optional!</strong> <br> if you want your art to have colors, it's best to color the image (messily) while
+    still in the sketching phase. I, however, don't do it often because I'm lazy or already have a colored character.
+    <br> Don't be me.</h2>
+
+    <a href="lineart.html">Lineart</a> <a href="Colouring.html">Colouring</a> <a href="Shading.html">Shading</a> <a href="Finishing touches.html">Finishing touches</a>
+
+        
+    <div>Heyyy</div>
+    <p>(Why am I doing this) Children learn to speak by copying their parents. Coders learn to code by copying what
+    others did untill they themselves understood and could go on their own path. Writers learn how to write nad make
+    their characters realistic by observing and <em>copying</em></p>
+</body>
+
