--- a/Colouring.html
+++ b/Colouring.html
@@ -3,7 +3,16 @@
     <title>Colouring</title>
 </head>
 <body>
-    
-    <a href="index.html">Sketch</a> <a href="lineart.html">Lineart</a> <a href="Shading.html">Shading</a> <a href="Finishing touches.html">Finishing touches</a>
     <h1>Colouring</h1>
+    <h1 class="block"><a class="margin" href="index.html">   Sketch</a> <a href="lineart.html">Lineart</a> <a href="Shading.html">Shading</a> <a href="Finishing touches.html">Finishing touches</a></h1>
+    <p>Under construction</p>
+    <!--<h1 class="block"><a class="margin" href="index.html">Sketch</a> <a href="lineart.html">Lineart</a> <a href="Shading.html">Shading</a> <a href="Finishing touches.html">Finishing touches</a></h1>
+    <p>Often I already have a character I just color-pick from, however there are many instances where I have to choose a
+    colour pallete, or even choose my own. When this happens, I either first draw balls of that color and see how well they
+    fit each other, or messily colour in the character and change the colours till they fit (and if I can't get them to fit
+    , I either cry, give up, or look for other colour palletes). There isn't much to say about this process as most of it
+    is praying to the colour theory and brute forcing it; one of the reasons I rather choose colour palletes than choose my
+    own colours.
+    </p>-->
+    <h1 class="no-bottom"><a class="margin" href="lineart.html">Lineart</a> <a href="Colouring.html">Colouring</a> <a href="Shading.html">Shading</a> <a href="Finishing touches.html">Finishing touches</a></h1>
 </body>
