--- a/Shading.html
+++ b/Shading.html
@@ -3,6 +3,8 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    
-    <a href="index.html">Sketch</a> <a href="lineart.html">Lineart</a> <a href="Colouring.html">Colouring</a> <a href="Finishing touches.html">Finishing touches</a>
+    <h1>1st layer of shading</h1>
+    <h1 class="block"><a class="margin" href="index.html">Sketch</a> <a href="lineart.html">Lineart</a> <a href="Colouring.html">Colouring</a> <a href="Finishing touches.html">Finishing touches</a></h1>
+    <p>Under construction</p>
+        <h1 class="no-bottom"><a class="margin" href="lineart.html">Lineart</a> <a href="Colouring.html">Colouring</a> <a href="Shading.html">Shading</a> <a href="Finishing touches.html">Finishing touches</a></h1>
 </body>
