--- a/index.html
+++ b/index.html
@@ -4,45 +4,45 @@
 </head>
 
 <body>
+
     <h1>How I draw</h1>
     <h2 class="comment">Hello, I am <em>Kami</em>. Drawing ever since I was a child, I often found myself thinking: "What if I could
     just copy someone else? Find out how they do it, and maybe even implore it into my own way of drawing?" You see,
     humans learn how to everything by <em>copying</em>. Speaking? Copying. Moving? Copying. Drawing? You guessed it,
-    <em>copying</em> It's easier to build a house when you have the ground already there. <br>
+    <em>copying</em>. It's easier to build a house when you have the ground already there. <br>
     Which is why, today, I am going to share <em>my</em> way of drawing, so you can find out how other people
     draw, and maybe even learn a few things yourself.</h2>
+    <h1 class="block"><a class="margin" href="lineart.html">Lineart</a> <a href="Colouring.html">Colouring</a> <a href="Shading.html">Shading</a> <a href="Finishing touches.html">Finishing touches</a></h1>
 
+    <h1>1st sketch</h1>
+    <h2 class="small-margin">In my opinion, a sketch is one of the most important parts when drawing.
+    It determines so many things: what is going on, how it will look when finished, what emotions do you want the viewer to feel, and so much more.
+    <br>Without a sketch, you have nothing. Unless you drew it a thousand times.</h2>
     
-    <a href="lineart.html">Lineart</a> <a href="Colouring.html">Colouring</a> <a href="Shading.html">Shading</a> <a href="Finishing touches.html">Finishing touches</a>
-
-    <h1>Sketch</h1>
-
-    <div><img src="kinda.png" alt="idkanymore"> stuff
+    <div><img src="simple sketch.png" alt="4 awfull sketches">
     </div>
-    <p>Personally, I deem a sketch the most important part of drawing. It determines where everything will go,how it will look,
-    and is the perfect time to give emotion and flow to the art. <br>
-    Most if not all times, my first sketch is messy and a understandable to only me. A good sketch should show where
-    everything is, how it will look, nd give a feeling. If your sketch doesn't have a feeling (unless you're using colours
-    for that), it won't have it at all. Sketching is where you let yourself be free and do whatever you want untill
-    you settle for one you like.</p>
+    <p>Barely ever is my first sketch something more than a scrambled mess. Understandable only to me, it heavily relies 
+    on what I already decided on. I use this part of the process on deciding: where are the characters going to be, 
+    what are the characters doing and what is in the background. Then, I make lines and boxes that loosely represent it.
+    <br> The first sketch isn't meant to be perfect, it's just a place to put all your thoughts down. The next step is 
+    when you get detailked.
+
     <h2>Sometimes I also draw the outline, a silluete, and kidna.. sculpt it? Slowly add details, one bit by
     another, untill I have a sketch. Or I simply draw the silluete and then draw the <strong>more detailed sketch</strong>
     afterwards.</h2>
 
     <h1>Detailed sketch</h1>
-
-    <p>This is where I add clothing, hair, expression and over all more detailed character.</p>
+    <p>This is where I add anatomy, clothing, hair, expression, and pretty much anything (that isn't tiny) I'd like to draw when I'm doing the outline.
+    While it's more detailed, it's still messy; however it has enough detail for me to start doing the lineart.
+    </p>
+    <div><img src="sketch.png" alt="sketch of a person"> </div>
 
     <h2><strong>Optional!</strong> <br> if you want your art to have colors, it's best to color the image (messily) while
-    still in the sketching phase. I, however, don't do it often because I'm lazy or already have a colored character.
+    still in the sketching phase. I, however, don't do that because I'm lazy or already have a colored character.
     <br> Don't be me.</h2>
-
-    <a href="lineart.html">Lineart</a> <a href="Colouring.html">Colouring</a> <a href="Shading.html">Shading</a> <a href="Finishing touches.html">Finishing touches</a>
-
         
-    <div>Heyyy</div>
-    <p>(Why am I doing this) Children learn to speak by copying their parents. Coders learn to code by copying what
-    others did untill they themselves understood and could go on their own path. Writers learn how to write nad make
-    their characters realistic by observing and <em>copying</em></p>
+
+    <h1 class="no-bottom"><a class="margin" href="lineart.html">Lineart</a> <a href="Colouring.html">Colouring</a> <a href="Shading.html">Shading</a> <a href="Finishing touches.html">Finishing touches</a></h1>
+
 </body>
 
