--- a/lineart.html
+++ b/lineart.html
@@ -1,20 +1,27 @@
 <html>
     <head>
         <link rel="stylesheet" href="main.css">
-    <tit    le>Lineart</title>
+    <title>Lineart</title>
     </head>
     <body>
-    <a href="index.html">Sketch</a> <a href="Colouring.html">Colouring</a> <a href="Shading.html">Shading</a> <a href="Finishing touches.html">Finishing touches</a>
-        <h1> Lineart</h1>
-        <div>
-            <p>Upon finishing my sketch, I finally start drawing lineart. I often go through my brushes to see which one fits the best.
-        Sometiems it takes longer than I'd wish. I usually just trace the lines and add more details. Barely ever do I actually
-        draw something very different from the sketch. I like to use multiple layers, incase something happened, and clean up my
-        lines (which are often too long and need to be cut down). For details, I use light lines, and for something important
-        (e.g. an arm holding something) I use bolder lines. This helps keep the viewer's attention towards what I want them to see,
-        instead of creating a chaos of "where should I look?". There are more ways to do this, however I often forget to do them. 
+        <h1>Lineart</h1>
+
+        <h1 class="block"><a class="margin" href="index.html">Sketch</a> <a href="Colouring.html">Colouring</a> <a href="Shading.html">Shading</a> <a href="Finishing touches.html">Finishing touches</a></h1>
         
-            </p>
-        </div>
+        <p>Under construction</p>
+
+        <!--
+            <p>Upon finishing my sketch, I finally start drawing lineart. I often go through my brushes to see which one fits the best.
+            Upon choosing my brush, I go over the sketch and try to make it presentable. Where there were messy lines now lay clean,
+             precise lines. I don't know how to explain it, but I pretty much clean it up and add details. Barely ever do I actually
+            draw something vastly different from my sketch, as that would cause much trouble down the line (e.g not fitting the anatomy,
+             not well thought out, looking off. If I ever <em>do</em> draw something different from the sketch, I make another sketch
+             solely for that).</p>
+             
+            <p>I use multiple layers, incase something doesn't fit or needs changing, and at the end clean up my lines (because they're
+            digging into other lines). For details, I use lighter lines, and for something important (e.g. the hand) I use bolder lines.
+            This helps direct the viewer's attention towards what I want them to see, instead of creating a chaos of "where should I look? What is more imporant?".
+            There are more ways to do this, like the construction of the piece, however I often forget to do them.</p>-->
+        <h1 class="no-bottom"><a class="margin" href="lineart.html">Lineart</a> <a href="Colouring.html">Colouring</a> <a href="Shading.html">Shading</a> <a href="Finishing touches.html">Finishing touches</a></h1>
     </body>
 </html>
